# wgpy

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  noxfile.py  pyproject.toml
src/wgpy/: config.py
src/wgpy/api/: main.py
src/wgpy/app/: router.py  schemas.py
src/wgpy/worker/: __init__.py  worker.py
src/wgpy/worker/actors/: main_actor.py
tests/api/: test_main.py
