[tool.poetry]
name = "wgpy"
version = "0.1.0"
description = ""
authors = ["Armin <Armin.Mahdilou@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.103.2"}
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
httpx = "^0.25.0"
remoulade = {extras = ["rabbitmq"], version = "^3.0.1"}
cachetools = "^5.3.1"

[tool.poetry.group.nox]
optional = true

[tool.poetry.group.nox.dependencies]
nox = "^2023.4.22"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
## pre-commit dependencies ##
pre-commit-hooks = "^4.4.0"
pre-commit = "^3.4.0"
bandit = "^1.7.5"
black = "^23.9.1"
isort = "^5.12.0"
pyupgrade = "^3.13.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"
pytest = "^7.4.2"
pytest-mock = "^3.11.1"

[tool.bandit]
skips = ["*/test_*.py"]

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
enable_error_code = [
  "ignore-without-code"
]
strict = true
warn_unreachable = true
warn_unused_ignores = true
pretty = true
show_column_numbers = true
show_error_context = true
disallow_untyped_calls = false
plugins = [
  "pydantic.mypy",
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[[tool.mypy.overrides]]
module = [ "pytest_mock" ]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
